<resources>
    <string name="app_name">Hotdeal-Go</string>
    <string name="greeting">환영합니다</string>
    <string name="input_user_id">아이디를 입력하세요</string>
    <string name="input_user_pass">비밀번호를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="sign_in">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fmkorea">fmkorea</string>
    <string name="quasarzone">quasarzone</string>
    <string name="ruliweb">ruliweb</string>
    <string name="plz_input_query">검색어를 입력하세요</string>
    <string name="search">검색</string>
    <string name="shoppingMallInfoAnnouncement">쇼핑몰&#160;</string>
    <string name="priceInfoAnnouncement">/ 가격&#160;</string>
    <string name="shippingFeeInfoAnnouncement">원/ 배송비&#160;</string>
    <string name="writedDateInfoAnnouncement">작성일시&#160;</string>
    <string name="likeCntInfoAnnouncement">/ 좋아요&#160;</string>
    <string name="mypage">마이페이지</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
</resources>