<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".presentation.view.LoginFragment">


        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/et_input_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_user_id"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/et_input_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_greeting"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting" />

        <EditText
            android:id="@+id/et_input_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_user_pass"
            android:inputType="textPassword"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/btn_hotdeal_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_input_id"
            app:layout_constraintTop_toBottomOf="@id/et_input_id" />

        <Button
            android:id="@+id/btn_hotdeal_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/ib_kakao_login"
            app:layout_constraintEnd_toStartOf="@id/btn_hotdeal_sign_in"
            app:layout_constraintStart_toStartOf="@+id/et_input_id"
            app:layout_constraintTop_toBottomOf="@id/et_input_pass" />

        <Button
            android:id="@+id/btn_hotdeal_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="@+id/btn_hotdeal_login"
            app:layout_constraintEnd_toEndOf="@+id/et_input_pass"
            app:layout_constraintStart_toEndOf="@+id/btn_hotdeal_login"
            app:layout_constraintTop_toTopOf="@+id/btn_hotdeal_login" />

        <com.navercorp.nid.oauth.view.NidOAuthLoginButton
            android:id="@+id/ib_naver_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/ib_kakao_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_kakao_login"
            app:layout_constraintTop_toTopOf="@id/ib_kakao_login" />

        <ImageButton
            android:id="@+id/ib_kakao_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/kakao_login_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ib_naver_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_hotdeal_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>