<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="hotDealViewModel"
            type="com.budge.hotdeal_go.presentation.viewmodel.HotDealViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presentation.view.HotDealFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/hotDealSearchET"
            app:layout_constraintEnd_toStartOf="@+id/hotDealSearchET"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hotDealSearchET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/plz_input_query"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            app:layout_constraintEnd_toStartOf="@+id/hotDealSearchBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/hotDealSearchBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/hotDealSearchET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/hotDealSearchET"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horisontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotDealSearchET">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotDealSearchET"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    style="@style/ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{hotDealViewModel.hotDealCheckedChipIds.contains(@id/chip1)}"
                    android:onCheckedChanged="@{(view, isChecked) -> hotDealViewModel.onChipToggled(@id/chip1)}"
                    android:text="@string/fmkorea"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:chipEndPadding="4dp"
                    app:chipStartPadding="4dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{hotDealViewModel.hotDealCheckedChipIds.contains(@id/chip2)}"
                    android:onCheckedChanged="@{(view, isChecked) -> hotDealViewModel.onChipToggled(@id/chip2)}"
                    android:text="@string/quasarzone"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:chipEndPadding="4dp"
                    app:chipStartPadding="4dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{hotDealViewModel.hotDealCheckedChipIds.contains(@id/chip3)}"
                    android:onCheckedChanged="@{(view, isChecked) -> hotDealViewModel.onChipToggled(@id/chip3)}"
                    android:text="@string/ruliweb"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:chipEndPadding="4dp"
                    app:chipStartPadding="4dp" />
            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horisontalScrollView"
            tools:itemCount="10"
            tools:listitem="@layout/item_hotdeal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
